[package]
name = "samsung_smart_fridge"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
serenity = { version = "0.12.4", features = ["model"] }
tokio = { version = "1.42.0", features = ["full"] }
logger = { git = "https://github.com/bowarc/crates", package = "logger" }
random = { git = "https://github.com/bowarc/crates", package = "random" }
log = "0.4.20"
futures = "0.3.31"
thiserror = "2.0.10"
uuid = { version = "1.12.1", features = ["v4"] }
